# doc/api.yaml
@@ -385,44 +385,6 @@ paths:
     - $ref: "#/components/parameters/fixedUsername"
     - $ref: "#/components/parameters/photoid"
 
-    #To Modify the Photo's Phrase.
-    put:
-      security:
-        - bearerAuthentication: []
-      operationId: setPhoto
-      tags: ["Photo-Uploading"]
-      summary: Change a Photo content.
-      description: | 
-        HOW IT WORKS:
-        Change a user's photo content, given a specific username that should the photo owner 
-        and given a specific photoid, that is the Id of the photo of which we want to change 
-        the content. Note that the only one thing that can be changed is the the phrase. 
-        Also here, we request for authentication of the user that wants to perform
-        this action. 
-        
-        RETURN:
-        Return the photoid iff the photo's content change is successful.
-        
-        RESTRICTIONS:
-        Note that this action is allowed to NOT EVERY USER. Indeed, this means that the 
-        change of photo can be done by ONLY if the user that is changing the photo is the 
-        actual ORIGINAL ACCOUNT OWNER. Otherwise, it cannot. 
-      
-      requestBody:
-        content:
-          application/json:
-            schema: {$ref: "#/components/schemas/phrase"}
-        required: true
-        
-      responses:
-        "204": 
-           description: An existing Photo's Phrase has been substituted!.
-        
-        '403': {$ref : '#/components/responses/UnAuthorized'}
-
-        '500': {$ref : '#/components/responses/InternalServerError'}
-
-
     #Deleting one particular photo that I got publicated.
     delete:
       security:
@@ -583,45 +545,6 @@ paths:
     - $ref: "#/components/parameters/fixedUsername"
     - $ref: "#/components/parameters/photoid"
     - $ref: "#/components/parameters/commentid"
-
-    #To Sobstitute a Photo's Comment.
-    put:
-      security:
-        - bearerAuthentication: []
-      operationId: setComment
-      tags: ["Photo-Comments"]
-      summary: Change the Photo's Comment.
-      description: | 
-        HOW IT WORKS:
-        Change a photo's comment given a specific fixedUsername that is the owner of the photo 
-        to which the comment has been added, given the photoid that indicates the photo on 
-        which the comment has been added, and given a specific commentid.
-        Note that as additional parameter, we ask, in a mandatorial way, for a new phrase 
-        that will sobstitute the one present for the comment. Also here, we request for 
-        authentication of the user that wants to perform this action. 
-        
-        RETURN:
-        Return the commentid iff the comment change is successful.
-        
-        RESTRICTIONS:
-        Note that this action is allowed to NOT EVERY USER. Indeed, this means that the 
-        change of comment can be done by ONLY if the user that is changing the comment
-        is the actual ORIGINAL COMMENTER. Otherwise, it cannot.
-        
-      requestBody:
-        content:
-          application/json:
-            schema: {$ref: "#/components/schemas/phrase"}
-        required: true
-        
-      responses:
-        "204": 
-           description: OK! An existing Photo's Comment has been modified.
-           
-        '403': {$ref : '#/components/responses/UnAuthorized'}
-
-        '500': {$ref : '#/components/responses/InternalServerError'}
-       
 
     #Deleting one particular photo's comment that I got publicated.
     delete:
